--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav class="module-nav">
             <div class="module-card" id="module-1">
-                <a href="module.html?id=1">
+                <a href="module1.html">
                     <svg class="module-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"></path></svg>
                     <h2>Módulo 1: Conceptos de la Nube</h2>
                     <p>La base de todo. ¿Qué es la nube, la infraestructura global y las 6 ventajas?</p>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="module-card" id="module-2">
-                <a href="module.html?id=2">
+                <a href="module2.html">
                     <svg class="module-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
                     <h2>Módulo 2: Seguridad y Cumplimiento</h2>
                     <p>El dominio más importante. IAM, Modelo de Responsabilidad, WAF, Shield y más.</p>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="module-card" id="module-3">
-                <a href="module.html?id=3">
+                <a href="module3.html">
                     <svg class="module-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2z"></path><line x1="12" y1="1" x2="12" y2="21"></line></svg>
                     <h2>Módulo 3: Tecnología y Servicios</h2>
                     <p>El "qué hace qué". EC2, S3, RDS, Lambda, VPC y todos los servicios principales.</p>
@@ -49,7 +49,7 @@
             </div>
 
             <div class="module-card" id="module-4">
-                <a href="module.html?id=4">
+                <a href="module4.html">
                     <svg class="module-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
                     <h2>Módulo 4: Facturación y Precios</h2>
                     <p>Cómo AWS gana dinero y cómo puedes ahorrar. Planes de Soporte y Cost Explorer.</p>
